--- a/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
@@ -29,13 +29,13 @@
         <p><a class="btn btn-default" href="/Stock/CreatePrediction">Create Prediction &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>8/2 Down Trends</h2>
+        <h2 class="color-downtrend">10/8 Down Trends</h2>
         <p>
             @{ Html.RenderAction("StockTrendReport", "Stock", new { days = 10, losingWinningStreak = 8, trend = "Bearish" });}
         </p>
     </div>
     <div class="col-md-4">
-        <h2>3/3 Up Trends</h2>
+        <h2 class="color-uptrend">3/3 Up Trends</h2>
         <p>
             @{ Html.RenderAction("StockTrendReport", "Stock", new { days = 3, losingWinningStreak = 3, trend = "Bullish" });}
         </p>
