--- a/Lychee.Stocks/Lychee.Stocks/Views/Shared/LastDataUpdates.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Shared/LastDataUpdates.cshtml
@@ -1,7 +1,10 @@
 ﻿@model Lychee.Stocks.Models.LastDataUpdateViewModel
-    
-<div class="pull-right data-updates">
-    <div>
-        Last Stock History Update: @Model.LastStockHistoryUpdate.ToShortDateString()
-    </div>
+
+<div>
+    Last Stock History Update: @Model.LastStockHistoryUpdate.ToShortDateString()
 </div>
+@*<div class="pull-right data-updates">
+        <div>
+            Last Stock History Update: @Model.LastStockHistoryUpdate.ToShortDateString()
+        </div>
+    </div>*@
