--- a/Lychee.Stocks/Lychee.Stocks/Views/Report/UpTrends.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Report/UpTrends.cshtml
@@ -3,11 +3,11 @@
 <div class="row">
     <div class="col-md-6">
         <h2 class="color-uptrend">2/2 Days Up</h2>
-        @Html.Partial("StockTrendReport", Model.FiveOverFive, new ViewDataDictionary { { "CodeExistsForAll", Model.StockCodesThatExistsForAll} })
+        @Html.Partial("StockTrendReport", Model.TwoOverTwo, new ViewDataDictionary { { "CodeExistsForAll", Model.StockCodesThatExistsForAll} })
     </div>
     <div class="col-md-6">
         <h2 class="color-uptrend">3/3 Days Up</h2>
-        @Html.Partial("StockTrendReport", Model.FiveOverFive, new ViewDataDictionary { { "CodeExistsForAll", Model.StockCodesThatExistsForAll} })
+        @Html.Partial("StockTrendReport", Model.ThreeOverThree, new ViewDataDictionary { { "CodeExistsForAll", Model.StockCodesThatExistsForAll} })
     </div>
     <div class="col-md-6">
         <h2 class="color-uptrend">5/5 Days Up</h2>
