--- a/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
@@ -8,33 +8,38 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-stocks navbar-fixed-top">
         <div class="container-fluid">
-            <div class="navbar-header">
+            <div class="navbar-header" id="nav-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("My Stocks", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("My Stocks", "Index", "Home", new { area = "" }, new { @class = "navbar-brand color-white" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Watch List", "About", "Home")</li>
                     <li>@Html.ActionLink("Predictions", "About", "Home")</li>
+                    <li>@Html.ActionLink("Stock List", "About", "Home")</li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("DownTrends", "DownTrends", "Report")</li>
                             <li>@Html.ActionLink("UpTrends", "UpTrends", "Report")</li>
-                            <li><a href="#">Something else here</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
+                            <li>@Html.ActionLink("Bids And Asks", "UpTrends", "Report")</li>
+                            <li>@Html.ActionLink("Most Trades", "UpTrends", "Report")</li>
+                            <li>@Html.ActionLink("Top Volume/Losers/Winners", "UpTrends", "Report")</li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">One more separated link</a></li>
+                            <li>@Html.ActionLink("Recommended Stocks", "UpTrends", "Report")</li>
+                            <li>@Html.ActionLink("Suspended And On Sale", "UpTrends", "Report")</li>
+                            <li>@Html.ActionLink("Oversold And Overbought", "UpTrends", "Report")</li>
                         </ul>
                     </li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Updates", "About", "Home")</li>
+                    <li>@Html.ActionLink("Settings", "Index", "Settings")</li>
                 </ul>
             </div>
         </div>
@@ -43,7 +48,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - My Stocks</p>
         </footer>
     </div>
 
