Stock block sale and suspended stocks

--- a/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("DownTrends", "DownTrends", "Report")</li>
                             <li>@Html.ActionLink("UpTrends", "UpTrends", "Report")</li>
+                            <li>@Html.ActionLink("Breakouts", "UpTrends", "Report")</li>
                             <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("Bids And Asks", "UpTrends", "Report")</li>
                             <li>@Html.ActionLink("Most Trades", "UpTrends", "Report")</li>
