Upgraded the project to use Investagrams Api wrapper

--- a/Lychee.Stocks/Lychee.Stocks/Views/Settings/Index.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Settings/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Lychee.Stocks.Entities.Setting>
+﻿@model IEnumerable<Lychee.Entities.Entities.Setting>
 
 @{
     ViewBag.Title = "Settings";
