--- a/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                             <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("Bids And Asks", "UpTrends", "Report")</li>
                             <li>@Html.ActionLink("Most Trades", "UpTrends", "Report")</li>
-                            <li>@Html.ActionLink("Top Volume/Losers/Winners", "UpTrends", "Report")</li>
+                            <li>@Html.ActionLink("Top Volume/Losers/Winners", "MarketStatus", "Report")</li>
                             <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("Recommended Stocks", "UpTrends", "Report")</li>
                             <li>@Html.ActionLink("Suspended And On Sale", "UpTrends", "Report")</li>
