--- a/Lychee.Stocks/Lychee.Stocks/Views/Report/_MarketStatusPartial.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Report/_MarketStatusPartial.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<Lychee.Stocks.InvestagramsApi.Models.Stocks.MarketStatusModel>
+﻿@using Lychee.Stocks.Domain.Helpers
+@using Lychee.Stocks.Helpers
+@using Lychee.Stocks.InvestagramsApi.Constants
+@model IEnumerable<Lychee.Stocks.Models.Reports.MarketStatusItemViewModel>
     <table class="table table-bordered">
         <thead>
         <tr>
@@ -13,12 +16,19 @@
         <tbody>
             @foreach (var item in Model)
             {
+                var stockClass = StockUIClassHelper.StockColourClass(item.ChangePercentage);
             <tr>
-                <td>@item.StockCode</td>
-                <td>@item.Last</td>
-                <td>@item.ChangePercentage</td>
-                <td>@item.Value</td>
-                <td>@item.Volume</td>
+                <td>
+                    <a href="@string.Format(UrlConstants.InvestagramsStockUrl, item.StockCode)" target="_blank">@item.StockCode</a>
+                    @if (!string.IsNullOrEmpty(item.Badge))
+                    {
+                        <span class="label label-@item.BadgeClass pull-right">@item.Badge</span>
+                    }
+                </td>
+                <td class="@stockClass">@item.Last</td>
+                <td class="@stockClass">@item.ChangePercentage%</td>
+                <td>@item.Value.ConvertToShortHand()</td>
+                <td>@item.Volume.ConvertToShortHand()</td>
             </tr>
             }
         </tbody>
