-Clean up stock controller and stock scoring

--- a/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
     <div class="col-md-4">
         <h2>Predictions</h2>
         <p>
-            @{ Html.RenderAction("Prediction", "Stock");}
+            @{ Html.RenderAction("Prediction", "Prediction");}
         </p>
         <p><a class="btn btn-default" href="/Stock/CreatePrediction">Create Prediction &raquo;</a></p>
     </div>
