--- a/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
@@ -22,7 +22,14 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Watch List", "About", "Home")</li>
                     <li>@Html.ActionLink("Predictions", "About", "Home")</li>
-                    <li>@Html.ActionLink("Stock List", "About", "Home")</li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stocks <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Stock List", "DownTrends", "Report")</li>
+                            <li role="separator" class="divider"></li>
+                            <li>@Html.ActionLink("Should I buy this stock?", "UpTrends", "Report")</li>
+                        </ul>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -39,7 +46,6 @@
                             <li>@Html.ActionLink("Oversold And Overbought", "UpTrends", "Report")</li>
                         </ul>
                     </li>
-                    <li>@Html.ActionLink("Updates", "About", "Home")</li>
                     <li>@Html.ActionLink("Settings", "Index", "Settings")</li>
                 </ul>
             </div>
