Fixes and clean up

--- a/Lychee.Stocks/Lychee.Stocks/Views/Prediction/Prediction.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Prediction/Prediction.cshtml
@@ -1,4 +1,4 @@
-﻿@using Lychee.Stocks.Domain.Constants
+﻿@using Lychee.Stocks.InvestagramsApi.Constants
 @model IEnumerable<Lychee.Stocks.Entities.MyPrediction>
 
 <table class="table table-hover table-striped">
