--- a/Lychee.Stocks/Lychee.Stocks/Views/Shared/StockTrendReport.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Shared/StockTrendReport.cshtml
@@ -1,6 +1,6 @@
-﻿@using Lychee.Stocks.Domain.Constants
-@using Lychee.Stocks.Domain.Enums
+﻿@using Lychee.Stocks.Domain.Enums
 @using Lychee.Stocks.Domain.Helpers
+@using Lychee.Stocks.InvestagramsApi.Constants
 @model IEnumerable<Lychee.Stocks.Entities.StockTrendReportModel>
 
 @{
