--- a/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Stock List", "DownTrends", "Report")</li>
                             <li role="separator" class="divider"></li>
-                            <li>@Html.ActionLink("Should I buy this stock?", "UpTrends", "Report")</li>
+                            <li>@Html.ActionLink("Should I buy this stock?", "ShouldIBuyStock", "Stock")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
