--- a/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
@@ -22,7 +22,13 @@
 </header>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-1">
+        <h2>Trending</h2>
+        <p>
+            @{ Html.RenderAction("TrendingStocks", "Home");}
+        </p>
+    </div>
+    <div class="col-md-3">
         <h2>Predictions</h2>
         <p>
             @{ Html.RenderAction("Prediction", "Prediction");}
@@ -32,13 +38,13 @@
     <div class="col-md-4">
         <h2 class="color-downtrend">8/10 Down Trends</h2>
         <p>
-            @{ Html.RenderAction("StockTrendReport", "Stock", new { days = 10, losingWinningStreak = 8, trend = "Bearish" });}
+            @{ Html.RenderAction("StockTrendReport", "Stock", new {days = 10, losingWinningStreak = 8, trend = "Bearish"});}
         </p>
     </div>
     <div class="col-md-4">
         <h2 class="color-uptrend">3/3 Up Trends</h2>
         <p>
-            @{ Html.RenderAction("StockTrendReport", "Stock", new { days = 3, losingWinningStreak = 3, trend = "Bullish" });}
+            @{ Html.RenderAction("StockTrendReport", "Stock", new {days = 3, losingWinningStreak = 3, trend = "Bullish"});}
         </p>
     </div>
 </div>
