Should I buy trending stocks

--- a/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                             <li>@Html.ActionLink("Stock List", "TrendingNow", "Report")</li>
                             <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("Should I buy this stock?", "ShouldIBuyStock", "Stock")</li>
+                            <li>@Html.ActionLink("Should I buy trending stock?", "ShouldIBuyTrendingStock", "Stock")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
