--- a/Lychee.Stocks/Lychee.Stocks/Views/Stock/ShouldIBuyStock.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Stock/ShouldIBuyStock.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Lychee.Stocks.InvestagramsApi.Constants
-@model Lychee.Stocks.Models.Stocks.ShouldIBuyStockViewModel
+@model Lychee.Stocks.Domain.Models.ShouldIBuyStockModel
 @{
     ViewBag.Title = "Should I Buy Stock";
 }
