-Chart By Minute Api -News Api -Additional Caching

--- a/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
@@ -46,6 +46,8 @@
                             <li>@Html.ActionLink("Recommended Stocks", "UpTrends", "Report")</li>
                             <li>@Html.ActionLink("Suspended And On Sale", "SuspendedAndOnSale", "Report")</li>
                             <li>@Html.ActionLink("Oversold And Overbought", "UpTrends", "Report")</li>
+                            <li role="separator" class="divider"></li>
+                            <li>@Html.ActionLink("News", "UpTrends", "Report")</li>
                         </ul>
                     </li>
                     <li>@Html.ActionLink("Settings", "Index", "Settings")</li>
