--- a/Lychee.Stocks/Lychee.Stocks/Views/Stock/StockAnalysisTrending.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Stock/StockAnalysisTrending.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Lychee.Stocks.InvestagramsApi.Constants
-@model List<Lychee.Stocks.Domain.Models.ShouldIBuyStockModel>
+@model List<Lychee.Stocks.Domain.Models.StockAnalysisModel>
 @{
     ViewBag.Title = "Should I Buy Trending Stocks";
 }
