--- a/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Lychee.Stocks.CustomHelper
+@{
     ViewBag.Title = "My Stocks";
 }
 
@@ -21,26 +22,26 @@
     </div>
 </header>
 
-<div class="row">
+<div class="row dashboard">
     <div class="col-md-2">
         <h2>Trending</h2>
         <p>
-            @{ Html.RenderAction("TrendingStocks", "Home");}
+            @Html.AsyncPartialLoader("TrendingStocks", "Home")
+        </p>
+        
+        <hr/>
+
+        <h2>Dividends</h2>
+        <p>
+            @Html.AsyncPartialLoader("Dividends", "Home")
         </p>
     </div>
     <div class="col-md-2">
-        <h2>Dividends</h2>
+        <h2>News</h2>
         <p>
-            @{ Html.RenderAction("Dividends", "Home");}
+            @Html.AsyncPartialLoader("News", "Home")
         </p>
     </div>
-    @*<div class="col-md-3">
-            <h2>Predictions</h2>
-            <p>
-                @{ Html.RenderAction("Prediction", "Prediction");}
-            </p>
-            <p><a class="btn btn-default" href="/Stock/CreatePrediction">Create Prediction &raquo;</a></p>
-        </div>*@
     <div class="col-md-4">
         <h2 class="color-downtrend">8/10 Down Trends</h2>
         <p>
