--- a/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Watch List", "About", "Home")</li>
+                    <li>@Html.ActionLink("Watch List", "Index", "Watchlist")</li>
                     <li>@Html.ActionLink("Predictions", "About", "Home")</li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stocks <span class="caret"></span></a>
@@ -45,10 +45,10 @@
                             <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("Recommended Stocks", "UpTrends", "Report")</li>
                             <li>@Html.ActionLink("Suspended And On Sale", "SuspendedAndOnSale", "Report")</li>
-                            <li>@Html.ActionLink("Oversold And Overbought", "UpTrends", "Report")</li>
                             <li role="separator" class="divider"></li>
-                            <li>@Html.ActionLink("Oversold", "UpTrends", "Report")</li>
-                            <li>@Html.ActionLink("Oversold Below 10 RSI", "UpTrends", "Report")</li>
+                            <li>@Html.ActionLink("Oversold", "OversoldStocks", "Report")</li>
+                            <li>@Html.ActionLink("Oversold Below 10 RSI", "OversoldStocksBelow20", "Report")</li>
+                            <li>@Html.ActionLink("Steep Down", "BouncePlay", "Report")</li>
                             <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("MACD About To Cross From Below (Bullish)", "MacdAboutToCrossFromBelowBullish", "Report")</li>
                             <li>@Html.ActionLink("MACD Crossing Signal From Below (Bullish)", "MacdCrossingSignalFromBelowBullish", "Report")</li>
