-Stocks with steep down -Refactor news partial view

--- a/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
@@ -43,6 +43,9 @@
         </p>
     </div>
     <div class="col-md-4">
+        
+        @Html.AsyncPartialLoader("SteepDown", "Home")
+
         <h2 class="color-downtrend">Oversold < 20</h2>
         <p>
             @Html.AsyncPartialLoader("Oversold", "Home")
