-Stocks with steep down -Refactor news partial view

--- a/Lychee.Stocks/Lychee.Stocks/Views/News/Stock.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/News/Stock.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Lychee.Stocks.InvestagramsApi.Models.Stocks.News>
+﻿@model List<Lychee.Stocks.Models.News.NewsViewModel>
 @{
     ViewBag.Title = "Stock News";
 }
