-change colour of last price -MACD in dashboard -Loading gif

--- a/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
+++ b/Lychee.Stocks/Lychee.Stocks/Views/Home/Index.cshtml
@@ -58,5 +58,13 @@
     </div>
     <div class="col-md-4">
 
+        <h2 class="color-uptrend">MACD About to Cross</h2>
+        <p>@Html.AsyncPartialLoader("AboutToCrossMacd", "Home")</p>
+
+        <hr />
+
+        <h2 class="color-uptrend">MACD About to Cross</h2>
+        <p>@Html.AsyncPartialLoader("CrossingMacd", "Home")</p>
+        
     </div>
 </div>
